# Helios3D

plugins/skyviewfactor/: CMakeLists.txt  README.md
plugins/skyviewfactor/include/: SkyViewFactorCamera.h  SkyViewFactorModel.h  SkyViewFactorRayTracing.cuh  SkyViewFactorRayTracing.h  SkyViewFactorRayTracing_Common.h
plugins/skyviewfactor/src/: SkyViewFactorCamera.cpp  SkyViewFactorModel.cpp  skyViewFactorPrimitiveIntersection.cu  skyViewFactorPrimitiveIntersection_empty.cu  skyViewFactorPrograms.cu  skyViewFactorRayGeneration.cu  skyViewFactorRayGeneration_empty.cu  skyViewFactorRayHit.cu  skyViewFactorRayHit_empty.cu
plugins/skyviewfactor/tests/: TestMain.cpp  selfTest.cpp
